fix for misaligned nav items in header

--- a/src/sass/modules/_nav.scss
+++ b/src/sass/modules/_nav.scss
@@ -74,6 +74,7 @@
 
 .nav__item {
 	display: block;
+	margin: 0;
 
 	& + & {
 		margin-left: $double-spacing-unit;
